# asherah-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  benchmark.py  download-libasherah.sh  pyproject.toml  tox.ini
.github/workflows/: publish.yml  test.yml
asherah/: __init__.py  asherah.py  exceptions.py  types.py
asherah/scripts/: download-libasherah.sh
tests/: test_asherah.py
